Production/Ansible - K3S Secrets

--- a/production/ansible/playbooks/kubernetes_replicate_github_secret.yaml
+++ b/production/ansible/playbooks/kubernetes_replicate_github_secret.yaml
@@ -1,17 +1,19 @@
 ---
-- name: Replicate github secret across namespaces
+- name: Replicate docker images secrets across namespaces
   hosts: private_ip[0]
   become: true
   become_user: root
   tasks:
-    - name: Create secrets
+    - name: Grant access to Github Packages
       shell: |
-        kubectl get secret github -n dysnomia-apps -o yaml | sed s/"namespace: dysnomia-apps"/"namespace: {{ item }}"/ | kubectl apply -n {{ item }} -f -
+        kubectl delete secret github -n {{ item }} || true
+        kubectl create secret docker-registry -n {{ item }} github --docker-server=ghcr.io --docker-username={{ argocd_github_username }} --docker-password={{ argocd_github_token }} --docker-email={{ argocd_github_mail }}
       loop:
       - achieve-games
       - alchemistry-leaderboard
       - dehash-me
       - discord-server-stats
+      - dysnomia-apps
       - dysnomia-website
       - dysnomia-wiki
       - elanis-cdn
@@ -19,11 +21,8 @@
       - factory-server-ptb
       - galactae
       - gaspar
-      - homepage
       - lumen-server
       - monitoring
-      - n8n
       - portfolio
       - redmine
-      - seafile
       - sonarqube
