--- a/production/octodns/config/elanis.eu.yaml
+++ b/production/octodns/config/elanis.eu.yaml
@@ -44,6 +44,10 @@ _dmarc:
   ttl: 0
   type: TXT
   value: v=DMARC1\; p=none
+lumen:
+  ttl: 0
+  type: CNAME
+  value: elanis.eu.
 protonmail2._domainkey:
   ttl: 0
   type: CNAME
