Production/Ansible - Add new secrets to Lumen

--- a/production/ansible/playbooks/kube-secrets/lumen-server/secrets/kustomization.example
+++ b/production/ansible/playbooks/kube-secrets/lumen-server/secrets/kustomization.example
@@ -1,7 +1,10 @@
 secretGenerator:
 - name: lumen-server
   literals:
+  - apiKey=APIKEY
   - libraryId=00000000-0000-0000-0000-000000000000
   - serverUrl=https://myseafile.example.tld
   - username=username@example.tld
   - password=PASSWORDHERE
+  - youtube_PlaylistId=PLAYLISTID
+  - youtube_APIKey=APIKEY
