--- a/production/ansible/playbooks/k3s_secrets.yaml
+++ b/production/ansible/playbooks/k3s_secrets.yaml
@@ -25,6 +25,7 @@
       loop:
       - achieve-games
       - alchemistry-leaderboard
+      - cours-m1
       - discord-server-stats
       - factory-server-prod
       - factory-server-ptb
