--- a/production/ansible/playbooks/kube-secrets/lumen-server/secrets/kustomization.example
+++ b/production/ansible/playbooks/kube-secrets/lumen-server/secrets/kustomization.example
@@ -6,5 +6,6 @@ secretGenerator:
   - serverUrl=https://myseafile.example.tld
   - username=username@example.tld
   - password=PASSWORDHERE
+  - goodreads_RSSURL="https://www.goodreads.com/user/updates_rss/ID?key=KEY"
   - youtube_PlaylistId=PLAYLISTID
   - youtube_APIKey=APIKEY
