Lumen NotABot module config entry

--- a/production/ansible/playbooks/kube-secrets/lumen-server/secrets/kustomization.example
+++ b/production/ansible/playbooks/kube-secrets/lumen-server/secrets/kustomization.example
@@ -7,5 +7,6 @@ secretGenerator:
   - username=username@example.tld
   - password=PASSWORDHERE
   - goodreads_RSSURL="https://www.goodreads.com/user/updates_rss/ID?key=KEY"
+  - notabot_serverlist='[]'
   - youtube_PlaylistId=PLAYLISTID
   - youtube_APIKey=APIKEY
