--- a/production/octodns/config/dysnomia.studio.yaml
+++ b/production/octodns/config/dysnomia.studio.yaml
@@ -11,7 +11,7 @@
     values:
     - '2001:41d0:2:910a::1'
     - '2001:41d0:a:2a22::1'
-    - '2a01:4f8:151:64ec::'
+    - '2a01:4f8:151:64ec::2'
   - ttl: 0
     type: MX
     values:
@@ -82,7 +82,7 @@ oxygen:
   value: 176.9.116.19
 - ttl: 0
   type: AAAA
-  value: '2a01:4f8:151:64ec::'
+  value: '2a01:4f8:151:64ec::2'
 'prd.manufacturinc':
   ttl: 0
   type: CNAME
