Move dysnomia's blog to my infra

--- a/production/octodns/config/dysnomia.studio.yaml
+++ b/production/octodns/config/dysnomia.studio.yaml
@@ -49,7 +49,7 @@ alchemistry-leaderboard:
 blog:
   ttl: 0
   type: CNAME
-  value: dysnomia-studio.github.io.
+  value: dysnomia.studio.
 bugs:
   ttl: 0
   type: CNAME
