Production/Ansible - Update k3s secrets list

--- a/production/ansible/playbooks/kube-secrets/lumen-server/secrets/kustomization.example
+++ b/production/ansible/playbooks/kube-secrets/lumen-server/secrets/kustomization.example
@@ -7,6 +7,7 @@ secretGenerator:
   - username=username@example.tld
   - password=PASSWORDHERE
   - goodreads_RSSURL="https://www.goodreads.com/user/updates_rss/ID?key=KEY"
+  - grdf_PCE_NUMBER=0123456789
   - notabot_serverlist='[]'
   - youtube_PlaylistId=PLAYLISTID
   - youtube_APIKey=APIKEY
