Production/Ansible - Add games-leaderboard secrets

--- a/production/ansible/playbooks/k3s_secrets.yaml
+++ b/production/ansible/playbooks/k3s_secrets.yaml
@@ -30,6 +30,7 @@
       - factory-server-prod
       - factory-server-ptb
       - galactae
+      - games-leaderboard
       - lumen-server
       - monitoring
       - seafile
