--- a/production/ansible/playbooks/kubernetes_replicate_github_secret.yaml
+++ b/production/ansible/playbooks/kubernetes_replicate_github_secret.yaml
@@ -12,6 +12,7 @@
       - achieve-games
       - alchemistry-leaderboard
       - dehash-me
+      - devblog
       - discord-server-stats
       - dysnomia-apps
       - dysnomia-website
@@ -20,6 +21,7 @@
       - factory-server-prod
       - factory-server-ptb
       - galactae
+      - games-leaderboard
       - gaspar
       - lumen-server
       - monitoring
