Production/Ansible - Add new Lumen secret

--- a/production/ansible/playbooks/kube-secrets/lumen-server/secrets/kustomization.example
+++ b/production/ansible/playbooks/kube-secrets/lumen-server/secrets/kustomization.example
@@ -6,6 +6,8 @@ secretGenerator:
   - serverUrl=https://myseafile.example.tld
   - username=username@example.tld
   - password=PASSWORDHERE
+  - enedis_PERSON_NUMBER=0123456789
+  - enedis_PRM_NUMBER=0123456789
   - goodreads_RSSURL="https://www.goodreads.com/user/updates_rss/ID?key=KEY"
   - grdf_PCE_NUMBER=0123456789
   - notabot_serverlist='[]'
