Production/Ansible - Add new seafile secret

--- a/production/ansible/playbooks/kube-secrets/seafile/secrets/kustomization.example
+++ b/production/ansible/playbooks/kube-secrets/seafile/secrets/kustomization.example
@@ -4,3 +4,4 @@ secretGenerator:
   - mysql-password=PASSWORD
   - admin-mail=username@example.tld
   - admin-password=PASSWORD
+  - jwt-private-key=KEY
