Octodns: add discord.dysnomia.studio

--- a/production/octodns/config/dysnomia.studio.yaml
+++ b/production/octodns/config/dysnomia.studio.yaml
@@ -65,6 +65,10 @@ cloud:
   ttl: 0
   type: CNAME
   value: dysnomia.studio.
+discord:
+  ttl: 0
+  type: CNAME
+  value: dysnomia.studio.
 leaderboard:
   ttl: 0
   type: CNAME
