New secrets: authentik

--- a/production/ansible/playbooks/k3s_secrets.yaml
+++ b/production/ansible/playbooks/k3s_secrets.yaml
@@ -24,6 +24,7 @@
       register: create_secrets
       loop:
       - achieve-games
+      - authentik
       - alchemistry-leaderboard
       - discord-server-stats
       - factory-server-prod
