Fix argocd_update script with argocd 3.3

--- a/production/ansible/playbooks/argocd_update.yaml
+++ b/production/ansible/playbooks/argocd_update.yaml
@@ -5,4 +5,4 @@
   become_user: root
   tasks:
     - name: Update argocd
-      command: kubectl apply -n argocd -f https://raw.githubusercontent.com/argoproj/argo-cd/stable/manifests/install.yaml
+      command: kubectl apply -n argocd --server-side --force-conflicts -f https://raw.githubusercontent.com/argoproj/argo-cd/stable/manifests/install.yaml
